webroot/monitor/infrastructure/common/ui/css/monitor.infra.css
/******Config Node chart and Analytics node chart CSS starts here****/

.mon-infra-chart g.nv-barsWrap g.nv-group {
    fill-opacity: 1 !important;
}
#analytics-nodes-chart .contrail-legend text,  #config-nodes-chart .contrail-legend text{
    font: normal 11px Open Sans;
    opacity: 1;
}
#analytics-nodes-chart .contrail-chart-title text, #config-nodes-chart .contrail-chart-title text  {
    font-size: 11px;
}
#config-nodes-chart, #analytics-nodes-chart{
    margin-top:15px !important;
}
#config-nodes-chart .chart-container g.main text.axis-label, #config-nodes-donutchart-section g.contrail-chart-title text, #config-nodes-linebarchart .nv-axislabel{
    text-anchor:middle !important;
    font-weight:600 !important;
    font-size:11px !important;
}
#config-nodes-stackedchart{
    width:53% !important;
}
#config-nodes-linebarchart{
    width:43% !important;
}
#analytics-chart-sandesh-stackedbarchart-id .chart-container g.main text.axis-label, #analytics-chart-queries-stackedbarchart-id .chart-container g.main text.axis-label, #analytics-chart-database-read-stackedbarchart-id .chart-container g.main text.axis-label,  #analytics-chart-database-write-stackedbarchart-id .chart-container g.main text.axis-label{
    text-anchor:middle;
    font-weight:600;
    font-size:11px !important;
}
#analytics-nodes-chart .chartMargin{
    margin:0 10px 0 10px !important;
}
/******Config Node chart and Analytics node chart Ends here****/

